Fix: 코드 리뷰 반영하여 인터페이스 기반 프로젝션 코드 작성, 테스트 작성